UI Tweak: Fixing navbar brand gap and size; Fixing faulty anchor link references and scrolling tags

--- a/src/index.css
+++ b/src/index.css
@@ -80,7 +80,7 @@ body {
 .nav-brand {
   display: flex;
   align-items: center;
-  gap: 1rem;
+  gap: 0.2rem;
   text-decoration: none;
 }
 
@@ -89,7 +89,7 @@ body {
 }
 
 .nav-brand img.nombre {
-  height: 20px;
+  height: 40px;
 }
 
 .nav-links {
